style fixes on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   background-color: rgb(5,5,5,1);
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(216, 255, 245);
   color-scheme: light dark;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-synthesis: none;
